--- a/css/index.css
+++ b/css/index.css
@@ -233,8 +233,8 @@ z-index: 20;
 @media only screen and (max-width: 480px) {
 	.iphone {
 		position: absolute;
-		bottom: 5%;
-
+		bottom: 8%;
+		height: 300px;
 		max-width: 20%;
 		text-align: right;
 
@@ -243,10 +243,16 @@ z-index: 20;
 
 	}
 
-	.iphone-mask {
+	.iphone-mask, .iphone-mask img {
+		max-width: 100%;
 		position: relative;
-		max-width: 120%;
 		top: -10%;
+	}
+
+	.app_store {
+		display: block;
+		width: 150% !important;
+		
 	}
 }
 
@@ -295,7 +301,7 @@ z-index: 20;
 	width: 50%;
 	margin-right: auto;
 	margin-left: auto;
-	padding-top: 20%;
+	padding-top: 10%;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
